# rust-log4rs-gelf

./: AUTHORS  CONTRIBUTORS  Cargo.toml  README.md
src/: appender.rs  file.rs  lib.rs
