[package]
name = "log4rs-gelf"
version = "0.1.4"
authors = ["OVH SAS <github@ovh.net>"]
license-file = "LICENSE"
description = "TCP Handler and GELF Encoder to use with the log4rs logging framework."
keywords = ["serde", "logs", "GELF"]
readme = "README.md"
repository = "https://github.com/ovh/rust-log4rs-gelf"

[dependencies]
log = "0.4"
log4rs = "1"
serde-value = "0.6"
gelf_logger = "0.2"
serde_gelf = "0.1"
anyhow = "1"